# open-abb-driver

./: CMakeLists.txt  README.md  package.xml
RAPID/: SERVER.mod  SERVER_Robot_6_08.mod
apps/: ExecuteCSV.cpp  TrajTest.cpp
include/open_abb_driver/: ABBControlInterface.h  ABBFeedbackInterface.h  ABBKinematics.h  ABBNode.h  ABBProtocol.h  SimpleDijkstra.hpp  TrajectoryGenerator.h
launch/: csv_traj.launch
node.js/: README.md  abb.js
nodes/: ABBNode.cpp
src/: ABBControlInterface.cpp  ABBFeedbackInterface.cpp  ABBKinematics.cpp  ABBProtocol.cpp  TrajectoryGenerator.cpp
srv/: AddWaypoint.srv  ClearWaypoints.srv  ExecuteWaypoints.srv  GetNumWaypoints.srv  SetCartesianLinear.srv  SetCartesianTrajectory.srv
